test/compile_errors/err_recovery_dot_incomplete.w
//! expect-error: expected

fn main:
    let name = "hello"
    name.
    print("done")
